#1740: Merge from main on long-lived, outdated branch